--- a/card.html
+++ b/card.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <audio autoplay loop src"1.mp3"></audio>
+  <audio autoplay loop src="1.mp3"></audio>
   <div class="wrap">
     <div class="postcard">
       <div class="letter"></div>
